fix: 레이아웃 overflow 이슈 수정
정# --- git commit type ---

--- a/src/app/(defaultLayout)/calculator/package/_components/PackageDetail/packageDetail.module.css
+++ b/src/app/(defaultLayout)/calculator/package/_components/PackageDetail/packageDetail.module.css
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     padding: 2.4rem;
     font-size: 1.4rem;
+    overflow-y: scroll;
 }
 .label {
     display: flex;
